--- a/setup.conf
+++ b/setup.conf
@@ -1,2 +1,2 @@
-JLINKPATH	=	<full path to JLink binary>
-ARMGCC_DIR	=	<full path to directory>
+JLINKPATH	=	<full path to JLinkExe> 
+ARMGCC_DIR	=	/usr
